ansible/lab/files/lab/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: default
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 8000
    name: web-gw
    allowedRoutes:
      namespaces:
        from: Same
